--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "i18n": "^0.15.0",
+    "node-fetch": "^2.6.7",
     "request": "^2.88.2"
   }
 }
