--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,9 @@ services:
     restart: always
     ports: 
       - 8080:8080
+    environment:
+      - PAGE_ACCESS_TOKEN=value
+      - VERIFY_TOKEN=value
+      - PORT=8080
     volumes:
       - .:/app
