--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webhook-app-facebook-instagram",
+  "name": "meta-simple-messaging-bot",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
